--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.jar
 *.war
 *.ear
+*/ass3
+ass3.zip
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
